--- a/research.html
+++ b/research.html
@@ -65,7 +65,7 @@
 								
 								<div class="col-7 col-12-mobile">
 								<p><small><small>I have worked on two different observational efforts to find
-								Lyman-alpha emitters at z > 3 in the EGS, COSMOS, and UDS fields using Keck spectrscopy. 										
+								Lyman-alpha emitters at z > 3 in the EGS, COSMOS, and UDS. 										
 								<a href="lyaE.html" class="button">Learn More</a></small></small>
 								</p>
 								</div>
