--- a/cgm.html
+++ b/cgm.html
@@ -55,7 +55,7 @@
 	
 								<section>
 									<header>
-										<h3>Quick Link Publications </h3>
+										<h3>Linked Publications </h3>
 									</header>
 									<p>
 										<h4><span style="color:#00008B"><a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230511232U/abstract"> 
