--- a/cgm.html
+++ b/cgm.html
@@ -30,7 +30,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Research</a>
+									<a href="research.html">Research</a>
 									<ul>
 										<li><a href="lyaE.html">High-Redshift Lya Emitters</a></li>
 										<li><a href="umgs.html">Ultra-Massive Galaxies</a></li>
@@ -92,7 +92,7 @@
 										<header>
 											<h3>On the Sizes of Damped Lyman-α Systems </h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/cgmofDLAs_ex.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/cgmofDLAs_ex.png" alt="" /></a>
 
 										<p>
 						
