--- a/cgm.html
+++ b/cgm.html
@@ -78,7 +78,7 @@
 											with Kate H. R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi, Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, 
 										Elisabeta Lusso, and Zachary Hafen
 											<br>
-										<a href="#" class="image featured"><img src="images/cgmofDLAs_ex.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/cgmofDLAs_ex.png" alt="" /></a>
 
 										<p>
 										We use medium- and high-resolution spectroscopy of close pairs of quasars to analyze the circum-
@@ -92,7 +92,6 @@
 										<header>
 											<h3>On the Sizes of Damped Lyman-α Systems </h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/cgmofDLAs_ex.png" alt="" /></a>
 
 										<p>
 						
