--- a/cgm.html
+++ b/cgm.html
@@ -85,7 +85,8 @@
 										galactic medium (CGM) surrounding 32 damped Lyα absorption systems (DLAs). The primary quasar
 										sightline in each pair probes an intervening DLA in the redshift range 1.6 < z<sub>abs</sub> < 3.5, such that the
 										secondary sightline probes absorption from Lyα and a large suite of metal-line transitions (including
-										O I, C II, C IV, Si II, and Si IV) in the DLA’s CGM at transverse distances 24 kpc < R < 284 kpc.	
+										O I, C II, C IV, Si II, and Si IV) in the DLA’s CGM at transverse distances 24 kpc < R < 284 kpc. We can then use these
+										to compare the gas metallicities and kinematics of the CGM to that of the host DLA.
 										</p>
 									</section>
 									<section>
