--- a/cgm.html
+++ b/cgm.html
@@ -77,7 +77,7 @@
 										</header>
 											with Kate H. R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi, Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, 
 										Elisabeta Lusso, and Zachary Hafen
-											<br>
+											<br><br>
 										<a class="image featured"><img src="images/cgmofDLAs_ex.png" alt="" /></a>
 
 										<p>
@@ -93,9 +93,9 @@
 										<header>
 											<h3>On the Sizes of Damped Lyman-α Systems </h3>
 										</header>
-
+											with Kate H. R. Rubin, J. Xavier Prochaska, Zachary Hafen, Jonathan Stern, and Aaron Kakoly
 										<p>
-						
+										We are are studying the potential sizes of DLAs at z ~ 2. Stay tuned for updates on this work!
 										</p>
 									</section>
 
