--- a/lyaE.html
+++ b/lyaE.html
@@ -91,7 +91,9 @@
 											with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
 											<br>
 											<a href="#" class="image fit"><img src="images/picture" alt="" /></a>
-											Summary of WERLS	<br>									
+											This is an ongoing survey of high-redshift (6 < z < 8) Lyman-alpha emitters in the EGS, COSMOS, and UDS. The massive
+											observational effort was awarded 29 nights using Keck/LRIS and Keck/MOSFIRE, and is set to be completed by January 2024.
+											<br>									
 											</p>
 										</p>
 									</section>
