--- a/pub.html
+++ b/pub.html
@@ -73,7 +73,7 @@
 									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, Kate H.R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi,
 									Nicolas Tejos, Michele Fumagalli, Marc Rafelski, Evan N. Kirby, Elisabeta Lusso,
 									Zachary Hafen <br>
-									<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230511232U/abstract"><span style="color:#E49B0F">Accepted for Publication in ApJ</span></a>
+									<a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...951..135U/abstract"><span style="color:#E49B0F">2023, ApJ, 951, 135</span></a>
 								</p>
 							</section>
           						<header>
@@ -81,13 +81,24 @@
 							</header>
 							<section>
 								<header>
+									<h3> Elentári: a massive proto-supercluster at z ∼ 3.3 in the COSMOS field </h3>
+								</header>
+								<p>
+									Ben Forrest, Brian C. Lemaux, Ekta Shah, Priti Staab, Ian McConachie, Olga Cucciati Roy R. Gal, Denise Hung, 
+									Lori M. Lubin, Letizia P. Cassarà, Paolo Cassata, Wenjun Chang, M. C. Cooper, Roberto Decarli, Percy Gomez,
+									Gayathri Gururajan, Nimish Hathi, Daichi Kashino, Danilo Marchesini, Z. Cemile Marsan, Michael McDonald, Adam Muzzin,
+									Lu Shen, <span style="color:#00008B">Stephanie Urbano Stawinski</span>, Margherita Talia, Daniela Vergani, Gillian Wilson, and Giovanni Zamoran
+									 <br>
+								<a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.526L..56F/abstract"> <span style="color:#E49B0F"> 2023, MNRAS, 526, 56 </span></a>
+								</p>
+								<header>
 									<h3> Rotation Curve Measurement of Dark Matter Content of a z ∼ 0.5 Galaxy </h3>
 								</header>
 								<p>
 									Jake Magee, Caitlin M. Casey, Olivia R. Cooper, Alfonso Melendez, Mia Fong, Jeyhan Karltaltepe, Arianna S. Long,
 									<span style="color:#00008B"> Stephanie Urbano Stawinski</span>, Jaclyn B. Champagne, M. C. Cooper, Andreas L. Faisst,
 									Claudia Maraston, and The  WERLS  Collaboration <br>
-								<a href="https://ui.adsabs.harvard.edu/abs/2023RNAAS...7..110M/abstract"> <span style="color:#E49B0F"> RNAAS, 2023, 7, 5 </span></a>
+								<a href="https://ui.adsabs.harvard.edu/abs/2023RNAAS...7..110M/abstract"> <span style="color:#E49B0F"> 2023, RNAAS, 7, 5 </span></a>
 								</p>
 								<header>
 									<h3>CEERS Key Paper IV: Galaxies at  4 < z < 9  are Bluer than They Appear -- Characterizing Galaxy Stellar Populations from Rest-Frame  ∼1  micron Imaging </h3>
