--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
 								<div class="col-2">
 									<a href="https://twitter.com/astrostawinski" class="image fit"><img src="images/twitterlogo.png" alt="" /></a>
 								</div>
-								<div class="col-8">
+								<div class="col-7">
 									<a href="https://ui.adsabs.harvard.edu/search/p_=0&q=author%3A%22Urbano%20Stawinski%2C%20Stephanie%20M.%22&sort=date%20desc%2C%20bibcode%20desc" class="image fit">
 										<img src="images/nasaadslogo.png" alt="" /></a>
+								</div>
+								<div class="col-3">
+									<a href="https://scholar.google.com/citations?hl=en&user=RvsWE6gAAAAJ" class="image fit">
+										<img src="images/scholarlogo.png" alt="" /></a>
 								</div>
 							</div>
 							</div>
