--- a/umgs.html
+++ b/umgs.html
@@ -90,11 +90,12 @@
 											crucial epoch. 
 										</p>
 										<p>
-											Using multi-band, wide-field imaging from the MAGAZ3NE collaboration in the XMM-VIDEO and COSMOS UltraVISTA 
-											fields, we identified a sample of UMGs with z<sub>phot</sub> > 4. We observed each of the 4 UMG candidates for ~4 hours with Keck/LRIS 
-											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. We use Pypeit to reduce a
-											coadded spectrum. 
+											Using multi-band, wide-field imaging from the MAGAZ3NE collaboration in the XMM-VIDEO, COSMOS UltraVISTA, and the EGS 
+											fields, we identified a sample of UMGs with z<sub>phot</sub> > 4. We observed each of the UMG candidates for a minimum of ~4 hours with Keck/LRIS or Keck/DEIMOS 
+											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. 
 										</p>
+										<p> Initial results include spectrscopic confirmation of a UMG in the EGS at z = 4.8947. What's more is this galaxy
+											lies within one of the most extreme overdensity in the EGS across 3 < z < 6. This work is ongoing, so for more information please feel free to email me!</p>
 									</section>
 								</article>
 							</div>
