--- a/umgs.html
+++ b/umgs.html
@@ -55,10 +55,10 @@
 	
 								<section>
 									<header>
-										<h3>Recent Publications</h3>
+										<h3>Linked Publications</h3>
 									</header>
 									<p>
-										This is under construction, to be updated soon!
+										This paper is in prep! Please email for more information. 
 									</p>
 									<div class="row gtr-50">
 										<div class="col-4">
