--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
-							Hello! I am a fourth year Astrophysics Ph.D candidate and observational astronomer at University of California, Irvine. My main interests surround galaxy formation and evolution at high redshifts. 
+							Hello! I am an Astrophysics Ph.D candidate and observational astronomer at University of California, Irvine. My main interests surround galaxy formation and evolution at high redshifts. 
 								I work mostly with spectroscopic observations, both in emission and in absoprtion. 
 						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the <a href="cgm.html"><span style="color:#4b0082">gas around galaxies</span></a> (specifically involving the CGM of 
 						Damped Lyman-alpha systems) and its effects on the host galaxy. 
 						Now at UCI, I have been working on detecting <a href="lyaE.html"><span style="color:#4b0082">Lyman-alpha emitters</span></a> at z > 4. Using the telescopes at Keck (both DEIMOS and LRIS), I have conducted large
-								surveys searching for Lyman-alpha emission from distant galaxies.
-						I am part of the WERLS collaboration looking for high-z Lyman-alpha emitters in the EGS, COSMOS, and UDS fields using Keck/LRIS. I am 
+								spectroscopic surveys searching for Lyman-alpha emission in distant galaxies.
+						<br>I am part of the WERLS collaboration which sought to find Lyman-alpha emitters at the end of reionization in the EGS, COSMOS, and UDS fields using Keck/LRIS. I am 
 						also part of the MAGAZ3NE collaboration, specifically studying detected Lyman-alpha emission from <a href="umg.html"><span style="color:#4b0082">Ultra-Massive galaxies</span></a> at z > 4. <br>
 						Outside of my research, I believe mentorship, teaching, and outreach are 
-						incredibly important in encouraging others to pursue science and helping students succeed in academia. Throughout my career, I have 
-						worked to give back to the community in this way. I have volunteered in many outreach efforts and mentorship programs 
-						(read more about them <a href="outreach.html"><span style="color:#4b0082">here</span></a>). 
+						incredibly important and crucial in encouraging others to pursue science and helping students succeed in academia. Throughout my career, I 
+						strive to give back to the community in this way. Take a look at some of the outreach efforts and mentorship programs I am a part of
+						 <a href="outreach.html"><span style="color:#4b0082">here</span></a>. 
 						</p>
 						</div>
 						</div>
@@ -113,7 +113,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2022 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li>&copy; 2024 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
 											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>
 										</ul>
 									</div>
