--- a/research.html
+++ b/research.html
@@ -66,7 +66,7 @@
 								<div class="col-7 col-12-mobile">
 								<p><small><small>I have worked on two different observational efforts to find
 								Lyman-alpha emitters at z > 3 in the EGS, COSMOS, and UDS. 										
-								<a href="lyaE.html" class="button">Learn More</a></small></small>
+								<a href="lyaE.html" class="button">Read More</a></small></small>
 								</p>
 								</div>
 								<div class="row">
@@ -79,7 +79,7 @@
 								<div class="col-7 col-12-mobile">
 								<p><small>	
 								In collaboration with MAGAZ3NE, I have been searching for spectrscopic confirmation of the most massive galaxies at z > 4. 
-								<a href="umgs.html" class="button">Learn More</a></small>
+								<a href="umgs.html" class="button">Read More</a></small>
 								</p>
 								</div>
 								</div>
@@ -94,7 +94,7 @@
 								<p><small>
 								I have worked extensively with absorption line systems to understand the diffuse gas surrounding high-z 
 									galaxies. 
-								<a href="cgm.html" class="button">Learn More</a></small>
+								<a href="cgm.html" class="button">Read More</a></small>
 
 								</p>
 								</div>
@@ -127,7 +127,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2022 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li>&copy; 2024 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
 											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>
 										</ul>
 									</div>
