--- a/research.html
+++ b/research.html
@@ -64,7 +64,7 @@
 								</div>
 								
 								<div class="col-7 col-12-mobile">
-								<p><small><small>I have worked on two different observational efforts to find
+								<p><small><small>I have conducted two different observational efforts to find
 								Lyman-alpha emitters at z > 3 in the EGS, COSMOS, and UDS. 										
 								<a href="lyaE.html" class="button">Read More</a></small></small>
 								</p>
