--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<a href="https://twitter.com/astrostawinski" class="image fit"><img src="images/twitterlogo.png" alt="" /></a>
 								</div>
 								<div class="col-7">
-									<a href="https://ui.adsabs.harvard.edu/search/p_=0&q=author%3A%22Urbano%20Stawinski%2C%20Stephanie%20M.%22&sort=date%20desc%2C%20bibcode%20desc" class="image fit">
+									<a href="https://ui.adsabs.harvard.edu/search/q=orcid%3A0000-0001-8169-7249&sort=date%20desc%2C%20bibcode%20desc&p_=0" class="image fit">
 										<img src="images/nasaadslogo.png" alt="" /></a>
 								</div>
 								<div class="col-3">
