--- a/pub.html
+++ b/pub.html
@@ -58,13 +58,21 @@
 							</header>
 							<section>
 								<header>
+									<h3>Spectroscopic Confirmation of an Ultra-Massive Galaxy in a Protocluster at z ∼ 4.9</h3>
+								</header>
+								<p>
+									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>,  M. C. Cooper,  Ben Forrest, Adam Muzzin, Danilo Marchesini, Gillian Wilson, Percy Gomez, 
+									Ian McConachie, Z. Cemile Marsan, Marianna Annuziatella, Wenjun Chang <br>
+									<a href="https://ui.adsabs.harvard.edu/abs/2024OJAp....7E..46U/abstract"><span style="color:#E49B0F">2024, OJA, 7, 46</span></a>
+								</p>
+								<header>
 									<h3>Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the Extended Groth Strip</h3>
 								</header>
 								<p>
 									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>,  M. C. Cooper, Steven L. Finkelstein, Intae Jung, Pablo G. Pérez-González, 
 									Caitlin M. Casey, Olivia R. Cooper, Nimish P. Hathi, Benne W. Holwerda, Anton M. Koekemoer, Vital Fernández, Rebecca L. Larson, Ray A. Lucas,
 									L. Y. Aaron Yung<br>
-									<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230704782U/abstract"><span style="color:#E49B0F">Submitted to MNRAS</span></a>
+									<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230704782U/abstract"><span style="color:#E49B0F">2024, MNRAS, 528, 4</span></a>
 								</p>
 								<header>
 									<h3>On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at z∼2</h3>
@@ -80,6 +88,38 @@
 								<h3>Nth Author</h3>
 							</header>
 							<section>
+								<header>
+									<h3> Environmental Effects on the Stellar Mass Function in a z ∼ 3.3 Overdensity of Galaxies in the COSMOS Field </h3>
+								</header>
+								<p>
+									Ben Forrest, Brian C. Lemaux, Ekta A. Shah, Priti Staab, Roy R. Gal, Lori M. Lubin, M. C. Cooper,
+									Olga Cucciati, Denise Hung, Ian McConachie, Adam Muzzin, Gillian Wilson, Sandro Bardelli, Letizia P. Cassara, Wenjun Chang,
+									Finn Giddings, Emmet Golden-Marx, Nimish Hathi, <span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, and Elena Zucca
+									 <br>
+								<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...971..169F/abstract"> <span style="color:#E49B0F"> 2024, ApJ, 971, 169 </span></a>
+								</p>
+								<header>
+									<h3> The Web Epoch of Reionization Lyα Survey (WERLS). I. MOSFIRE Spectroscopy of z ∼ 7–8 Lyα Emitters </h3>
+								</header>
+								<p>
+									Olivia R. Cooper, Caitlin M. Casey, Hollis B. Akins, Jake Magee, Alfonso Melendez, Mia Fong, <span style="color:#00008B">Stephanie M. Urbano Stawinski</span>,
+									Jeyhan S. Kartaltepe, Steven L. Finkelstein, Rebecca L. Larson, Intae Jung, Ash Bista, Jaclyn B. Champagne, Oscar A. Chavez Ortiz,
+									Sadie Coffin, M. C. Cooper, Nicole Drakos, Andreas L. Faisst, Maximilien Franco, Seiji Fujimoto, Steven Gillman, Ghassem Gozaliasl, Santosh Harish,
+									Taylor A. Hutchison, Anton M. Koekemoer, Vasily Kokorev, Jitrapon Lertprasertpong, Daizhong Liu, Arianna S. Long, Casey Papovich, R. Michael Rich,
+									Brant E. Robertson, Margherita Talia, Brittany N. Vanderhoof, Katherine E. Whitaker, and Jorge A. Zavala  
+									 <br>
+								<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...970...50C/abstract"> <span style="color:#E49B0F"> 2024, ApJ, 970, 50 </span></a>
+								</p>
+								<header>
+									<h3> MAGAZ3NE: Massive, Extremely Dusty Galaxies at  z∼2 Lead to Photometric Overestimation of Number Densities of the Most Massive Galaxies at  3<z<4 </h3>
+								</header>
+								<p>
+									Ben Forrest, M. C. Cooper, Adam Muzzin, Gillin Wilson, Danilo Marchesini, Ian McConachie, Percy Gomez, Marianna Annunziatella, 
+									Z. Cemile Marsan, Joey Braspenning, Wenjun Chang, Gabriella de Lucia, Fabio Fontanot, Michaela Hirschmann, Dylan Nelson,
+									Annalisa Pillepich, Joop Schaye, <span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, Mauro Stefanon, and Lizhi 
+									 <br>
+								<a href="https://ui.adsabs.harvard.edu/abs/2024arXiv240419018F/abstract"> <span style="color:#E49B0F"> Submitted to ApJ </span></a>
+								</p>
 								<header>
 									<h3> Elentári: a massive proto-supercluster at z ∼ 3.3 in the COSMOS field </h3>
 								</header>
