--- a/pub.html
+++ b/pub.html
@@ -58,7 +58,7 @@
 							</header>
 							<section>
 								<header>
-									<h3>Spectroscopic Confirmation of an Ultra-Massive Galaxy in a Protocluster at z ∼ 4.9</h3>
+									<h3> [1] Spectroscopic Confirmation of an Ultra-Massive Galaxy in a Protocluster at z ∼ 4.9</h3>
 								</header>
 								<p>
 									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>,  M. C. Cooper,  Ben Forrest, Adam Muzzin, Danilo Marchesini, Gillian Wilson, Percy Gomez, 
@@ -66,7 +66,7 @@
 									<a href="https://ui.adsabs.harvard.edu/abs/2024OJAp....7E..46U/abstract"><span style="color:#E49B0F">2024, OJA, 7, 46</span></a>
 								</p>
 								<header>
-									<h3>Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the Extended Groth Strip</h3>
+									<h3> [2] Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the Extended Groth Strip</h3>
 								</header>
 								<p>
 									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>,  M. C. Cooper, Steven L. Finkelstein, Intae Jung, Pablo G. Pérez-González, 
@@ -75,7 +75,7 @@
 									<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230704782U/abstract"><span style="color:#E49B0F">2024, MNRAS, 528, 4</span></a>
 								</p>
 								<header>
-									<h3>On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at z∼2</h3>
+									<h3> [3] On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at z∼2</h3>
 								</header>
 								<p>
 									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, Kate H.R. Rubin, J. Xavier Prochaska, Joseph F. Hennawi,
@@ -89,7 +89,7 @@
 							</header>
 							<section>
 								<header>
-									<h3> Environmental Effects on the Stellar Mass Function in a z ∼ 3.3 Overdensity of Galaxies in the COSMOS Field </h3>
+									<h3> [1] Environmental Effects on the Stellar Mass Function in a z ∼ 3.3 Overdensity of Galaxies in the COSMOS Field </h3>
 								</header>
 								<p>
 									Ben Forrest, Brian C. Lemaux, Ekta A. Shah, Priti Staab, Roy R. Gal, Lori M. Lubin, M. C. Cooper,
@@ -99,7 +99,7 @@
 								<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...971..169F/abstract"> <span style="color:#E49B0F"> 2024, ApJ, 971, 169 </span></a>
 								</p>
 								<header>
-									<h3> The Web Epoch of Reionization Lyα Survey (WERLS). I. MOSFIRE Spectroscopy of z ∼ 7–8 Lyα Emitters </h3>
+									<h3> [2] The Web Epoch of Reionization Lyα Survey (WERLS). I. MOSFIRE Spectroscopy of z ∼ 7–8 Lyα Emitters </h3>
 								</header>
 								<p>
 									Olivia R. Cooper, Caitlin M. Casey, Hollis B. Akins, Jake Magee, Alfonso Melendez, Mia Fong, <span style="color:#00008B">Stephanie M. Urbano Stawinski</span>,
@@ -111,7 +111,7 @@
 								<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...970...50C/abstract"> <span style="color:#E49B0F"> 2024, ApJ, 970, 50 </span></a>
 								</p>
 								<header>
-									<h3> MAGAZ3NE: Massive, Extremely Dusty Galaxies at  z∼2 Lead to Photometric Overestimation of Number Densities of the Most Massive Galaxies at  3<z<4 </h3>
+									<h3> [3] MAGAZ3NE: Massive, Extremely Dusty Galaxies at  z∼2 Lead to Photometric Overestimation of Number Densities of the Most Massive Galaxies at  3<z<4 </h3>
 								</header>
 								<p>
 									Ben Forrest, M. C. Cooper, Adam Muzzin, Gillin Wilson, Danilo Marchesini, Ian McConachie, Percy Gomez, Marianna Annunziatella, 
@@ -121,7 +121,7 @@
 								<a href="https://ui.adsabs.harvard.edu/abs/2024arXiv240419018F/abstract"> <span style="color:#E49B0F"> Submitted to ApJ </span></a>
 								</p>
 								<header>
-									<h3> Elentári: a massive proto-supercluster at z ∼ 3.3 in the COSMOS field </h3>
+									<h3> [4] Elentári: a massive proto-supercluster at z ∼ 3.3 in the COSMOS field </h3>
 								</header>
 								<p>
 									Ben Forrest, Brian C. Lemaux, Ekta Shah, Priti Staab, Ian McConachie, Olga Cucciati Roy R. Gal, Denise Hung, 
@@ -132,7 +132,7 @@
 								<a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.526L..56F/abstract"> <span style="color:#E49B0F"> 2023, MNRAS, 526, 56 </span></a>
 								</p>
 								<header>
-									<h3> Rotation Curve Measurement of Dark Matter Content of a z ∼ 0.5 Galaxy </h3>
+									<h3> [5] Rotation Curve Measurement of Dark Matter Content of a z ∼ 0.5 Galaxy </h3>
 								</header>
 								<p>
 									Jake Magee, Caitlin M. Casey, Olivia R. Cooper, Alfonso Melendez, Mia Fong, Jeyhan Karltaltepe, Arianna S. Long,
@@ -141,7 +141,7 @@
 								<a href="https://ui.adsabs.harvard.edu/abs/2023RNAAS...7..110M/abstract"> <span style="color:#E49B0F"> 2023, RNAAS, 7, 5 </span></a>
 								</p>
 								<header>
-									<h3>CEERS Key Paper IV: Galaxies at  4 < z < 9  are Bluer than They Appear -- Characterizing Galaxy Stellar Populations from Rest-Frame  ∼1  micron Imaging </h3>
+									<h3> [6] CEERS Key Paper IV: Galaxies at  4 < z < 9  are Bluer than They Appear -- Characterizing Galaxy Stellar Populations from Rest-Frame  ∼1  micron Imaging </h3>
 								</header>
 								<p>
 									Casey Papovich, Justin W. Cole, Guang Yang, Steven L. Finkelstein, Guillermo Barro, Véronique Buat, Denis Burgarella, Pablo G. Pérez-González, Paola Santini, 
@@ -153,7 +153,7 @@
 								<a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...949L..18P/abstract"> <span style="color:#E49B0F"> 2023, ApJ, 949, 18 </span></a>
 								</p>
 								<header>
-									<h3>MAGAZ3NE: High Stellar Velocity Dispersions for Ultra-Massive Quiescent Galaxies at  z ≳ 3</h3>
+									<h3> [7] MAGAZ3NE: High Stellar Velocity Dispersions for Ultra-Massive Quiescent Galaxies at  z ≳ 3</h3>
 								</header>
 								<p>
 								Ben Forrest, Gillian Wilson, Adam Muzzin, Danilo Marchesini, M. C. Cooper, Z. Cemile Marsan, Marianna Annunziatella, Ian McConachie, 
@@ -162,14 +162,14 @@
 								<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220804329F/abstract"> <span style="color:#E49B0F"> 2022, ApJ, 938, 109 </span></a>
 								</p>
 								<header>
-									<h3>Additional Multicolor Photometric Observations of the Latest Eruption of the Recurrent Nova M31N 2008-12a</h3>
+									<h3> [8] Additional Multicolor Photometric Observations of the Latest Eruption of the Recurrent Nova M31N 2008-12a</h3>
 								</header>
 								<p>
 								P. A. Wysocki, Q. Socia, M. A. Engesser, M. Yenawine, <span style="color:#00008B"> S. M. Stawinski </span>, A. W. Shafter <br>
 								<a href="https://ui.adsabs.harvard.edu/abs/2018ATel12190....1W/abstract"> <span style="color:#E49B0F"> 2018, ATel, 12190, 1 </span></a>
 								</p>
 								<header>
-									<h3>SÍGAME Simulations of the [CII], [OI], and [OIII] Line Emission from Star-forming Galaxies at z≃ 6</h3>
+									<h3> [9] SÍGAME Simulations of the [CII], [OI], and [OIII] Line Emission from Star-forming Galaxies at z≃ 6</h3>
 								</header>
 								<p>
 								Karen Olsen, Thomas R. Greve, Desika Narayanan, Robert Thompson, Romeel Davé, Luis Niebla Rios, and <span style="color:#00008B">Stephanie Stawinski</span> <br>	
@@ -196,7 +196,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2022 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li>&copy; 2024 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
 											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>
 										</ul>
 									</div>
