--- a/teaching.html
+++ b/teaching.html
@@ -55,37 +55,57 @@
 						<article id="main" class="special">
 							<section>
 								<header>
-									<h3>P20E Life in the Universe (TA)</h3>
+									<h3>Course Instructor</h3>
+								</header>
+								<header>
+									<h3>ASTR 109 Astronomy Lab, San Diego State University (4 semesters) </h3>
 								</header>
 								<p>
 								</p>
 								<header>
-									<h3>P20A Introduction to Astronomy (TA)</h3>
+									<h3>AST 113/114 Astronomy Lab, Arizona State University (3 semesters) </h3>
+								</header>
+								<p>
+								</p>
+								
+								<header>
+									<h3>TA (~5 combined years)</h3>
+								</header>
+								<header>
+									<h3>P20A Introduction to Astronomy, University of California - Irvine</h3>
 								</header>
 								<p>
 								</p>
 								<header>
-									<h3>P61C Introduction to Astrophysics (TA) </h3>
+									<h3>P61C Introduction to Astrophysics, University of California - Irvine </h3>
 								</header>
 								<p>
 								</p>
 								<header>
-									<h3>P20B Cosmology (TA)</h3>
+									<h3>P20B Cosmology, University of California - Irvine</h3>
 								</header>
 								<p>
 								</p>
 								<header>
-									<h3>P3LC Basic Physics Laboratory - Optics (TA)</h3>
+									<h3>P3LC Basic Physics Laboratory, University of California - Irvine</h3>
 								</header>
 								<p>
 								</p>
 								<header>
-									<h3>ASTR 109 Astronomy Lab (Course Instructor - SDSU) </h3>
+									<h3>P20E Life in the Universe, University of California - Irvine</h3>
 								</header>
 								<p>
 								</p>
 								<header>
-									<h3>AST 113/114 Astronomy Lab (Course Instructor - ASU) </h3>
+									<h3>P3A Basic Physics I, University of California - Irvine</h3>
+								</header>
+								<p>
+								</p>
+								<header>
+									<h3>Guest Lecturer </h3>
+								</header>
+								<header>
+									<h3>AST 101 Introduction to Astronomy, San Diego State University  </h3>
 								</header>
 								<p>
 								</p>
