--- a/teaching.html
+++ b/teaching.html
@@ -53,10 +53,10 @@
 
 					<div class="container">
 						<article id="main" class="special">
-							<section>
-								<header>
+							<header>
 									<h3>Course Instructor</h3>
-								</header>
+							</header>
+							<section>
 								<header>
 									<h3>ASTR 109 Astronomy Lab, San Diego State University (4 semesters) </h3>
 								</header>
@@ -67,10 +67,11 @@
 								</header>
 								<p>
 								</p>
-								
-								<header>
+							</section>
+							<header>
 									<h3>TA (~5 combined years)</h3>
-								</header>
+							</header>
+							<section>
 								<header>
 									<h3>P20A Introduction to Astronomy, University of California - Irvine</h3>
 								</header>
@@ -101,14 +102,17 @@
 								</header>
 								<p>
 								</p>
-								<header>
-									<h3>Guest Lecturer </h3>
-								</header>
+							</section>
+							<header>
+									<h3>Guest Lecturer</h3>
+							</header>
+							<section>
 								<header>
 									<h3>AST 101 Introduction to Astronomy, San Diego State University  </h3>
 								</header>
 								<p>
 								</p>
+							</section>
 						</article>
 					</div>
 				</div>
