--- a/lyaE.html
+++ b/lyaE.html
@@ -55,11 +55,12 @@
 	
 								<section>
 									<header>
-										<h3>Linked Publications </h3>
+										<h3>Linked 1st Author Publications </h3>
 									</header>
 									<p>
 										<h4><span style="color:#00008B"><a href="https://arxiv.org/abs/2307.04782"> Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the 
 											Extended Groth Strip</a></span></h4>
+										<h4><span style="color:#00008B"><a href=""> WERLS II: Keck/LRIS Spectroscopic Survey of Lyα Emitters (in preparation)</a></span></h4>
 									</p>
 								</section>
 							</div>
@@ -90,9 +91,13 @@
 										<h2><b>WERLS Survey</b> </h2> <br>
 											with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
 											<br> <br>
-											<a href="#" class="image fit"><img src="images/picture" alt="" /></a>
-											This is an ongoing survey of high-redshift (6 < z < 8) Lyman-alpha emitters in the EGS, COSMOS, and UDS. The massive
-											observational effort was awarded 29 nights using Keck/LRIS and Keck/MOSFIRE, and is set to be completed by January 2024.
+											<a class="image fit"><img src="images/WERLSfp" alt="Credit: Caitlin Casey 2021" /></a>
+											This is an extensive survey of high-redshift (6 < z < 8) Lyman-alpha emitters in the EGS, COSMOS, and UDS. The massive
+											observational effort was awarded 29 nights using Keck/LRIS and Keck/MOSFIRE, and was completed by January 2024. I conducted 
+											Keck/LRIS obsrevations, data reduction, and analysis, to be descirbed in Urbano Stawinski et al. in prepartion. 
+
+											The observations will greatly increase the number of known Lyman-alpha emitters in fields targeted by major <it>JWST</it>
+											programs. Our data will aid in target selection as well as understanding galaxies at the end of reionization. 
 											<br>									
 											</p>
 										</p>
