--- a/lyaE.html
+++ b/lyaE.html
@@ -71,7 +71,7 @@
 										We are approaching a new era in the field of high-redshift galaxies with the launch of the James Webb Space Telescope (JWST). 
 										Thus, it is critical to provide a robust sample of potential targets, as well as understand galaxies in the epochs near reionization
 										to bridge the gap between current and future observations. We present the results from 2 spectroscopic surveys to analyze 
-										Lyman-α emitters at the epoch before reionization (z~4-6). 
+										Lyman-α emitters at the epoch at the end of reionization (z~4-6). 
 										<p><br>
 											
 										<h2><b>Deeper than Deep Survey</b> </h2> <br>
@@ -84,8 +84,8 @@
 											Lyman-α emitters with z<sub>phot</sub> > 3 for spectroscopic follow up with Keck/DEIMOS. We confirm 126 Lyman-α emitters 
 											at 2.8 < z < 6.5, including 4 with z > 6. Our observations will help constrain the Lyman-α fraction from 4 < z < 6 in an independent 
 											field from previous studies. In addition, this survey will greatly assist target selection for The Cosmic Evolution Early Release Science 
-											Survey (CEERS), which will study >400 galaxies in the EGS field within the first 5 months of JWST science observations. <br>
-												Our survey website, where you can download the entire catalog, can be found here: <a href="https://sstawins.github.io/deeper_than_deep/index.html">
+											Survey (CEERS), which studied >400 galaxies in the EGS field within the first 5 months of JWST science observations. <br>
+												The survey website, where you can download the entire catalog, can be found here: <a href="https://sstawins.github.io/deeper_than_deep/index.html">
 												https://sstawins.github.io/deeper_than_deep/index.html</a><br>									</p>
 										</p>
 										<h2><b>WERLS Survey</b> </h2> <br>
