--- a/lyaE.html
+++ b/lyaE.html
@@ -91,7 +91,7 @@
 										<h2><b>WERLS Survey</b> </h2> <br>
 											with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
 											<br> <br>
-											<a class="image fit"><img src="images/WERLSfp" alt="Credit: Caitlin Casey 2021" /></a>
+											<a class="image fit"><img src="images/WERLSfp.png" alt="Credit: Caitlin Casey 2021" /></a>
 											This is an extensive survey of high-redshift (6 < z < 8) Lyman-alpha emitters in the EGS, COSMOS, and UDS. The massive
 											observational effort was awarded 29 nights using Keck/LRIS and Keck/MOSFIRE, and was completed by January 2024. I conducted 
 											Keck/LRIS obsrevations, data reduction, and analysis, to be descirbed in Urbano Stawinski et al. in prepartion. 
@@ -126,7 +126,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2022 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li>&copy; 2024 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
 											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>
 										</ul>
 									</div>
