--- a/lyaE.html
+++ b/lyaE.html
@@ -60,6 +60,7 @@
 									<p>
 										<h4><span style="color:#00008B"><a href="https://arxiv.org/abs/2307.04782"> Deeper than DEEP: A Spectroscopic Survey of z>3 Lyα Emitters in the 
 											Extended Groth Strip</a></span></h4>
+										<br>
 										<h4><span style="color:#00008B"><a href=""> WERLS II: Keck/LRIS Spectroscopic Survey of Lyα Emitters (in preparation)</a></span></h4>
 									</p>
 								</section>
@@ -91,11 +92,11 @@
 										<h2><b>WERLS Survey</b> </h2> <br>
 											with Caitlin M. Casey, Jeyhan Kartaltepe, Olivia Cooper, Arianna Long, Mike Cooper, and others
 											<br> <br>
-											<a class="image fit"><img src="images/WERLSfp.png" alt="Credit: Caitlin Casey 2021" /></a>
+											<a class="image fit"><img src="" alt="" /></a>
 											This is an extensive survey of high-redshift (6 < z < 8) Lyman-alpha emitters in the EGS, COSMOS, and UDS. The massive
 											observational effort was awarded 29 nights using Keck/LRIS and Keck/MOSFIRE, and was completed by January 2024. I conducted 
 											Keck/LRIS obsrevations, data reduction, and analysis, to be descirbed in Urbano Stawinski et al. in prepartion. 
-
+											<br>
 											The observations will greatly increase the number of known Lyman-alpha emitters in fields targeted by major <it>JWST</it>
 											programs. Our data will aid in target selection as well as understanding galaxies at the end of reionization. 
 											<br>									
