--- a/cgm.html
+++ b/cgm.html
@@ -59,7 +59,10 @@
 									</header>
 									<p>
 										<h4><span style="color:#00008B"><a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230511232U/abstract"> 
-											On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at  z∼2.5</a></span></h4>								
+											On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at  z∼2.5</a></span></h4>	
+										<br>
+										<h4><span style="color:#00008B"><a href=""> 
+											The Sizes of DLAs at z~3 (in preparation) </a></span></h4>	
 									</p>
 								</section>
 							</div>
@@ -91,11 +94,14 @@
 									</section>
 									<section>
 										<header>
-											<h3>On the Sizes of Damped Lyman-α Systems </h3>
+											<h3>Sizes of Damped Lyman-α Systems at z ~ 3 </h3>
 										</header>
 											with Kate H. R. Rubin, J. Xavier Prochaska, Zachary Hafen, Jonathan Stern, and Aaron Kakoly
 										<p>
-										We are are studying the potential sizes of DLAs at z ~ 2. Stay tuned for updates on this work!
+										Damped Lyα absorption systems (DLAs) are the dominant resevoir of neutral gas at z < 5. As they are typically 
+										detected using line of sight observations, there is little known about the extent of this gas.
+										Using observational data along with simulations, we seek to estimate the general sizes of DLAs. 
+										This work is in preparation, to be submitted early 2025 (Urbano Stawinski et al. in prep). 
 										</p>
 									</section>
 
@@ -123,7 +129,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2022 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li>&copy; 2024 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
 											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>
 										</ul>
 									</div>
