--- a/cgm.html
+++ b/cgm.html
@@ -55,14 +55,14 @@
 	
 								<section>
 									<header>
-										<h3>Linked Publications </h3>
+										<h3>Linked 1st Author Publications </h3>
 									</header>
 									<p>
 										<h4><span style="color:#00008B"><a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230511232U/abstract"> 
 											On the Metallicities and Kinematics of the Circumgalactic Media of Damped Lyα Systems at  z∼2.5</a></span></h4>	
 										<br>
 										<h4><span style="color:#00008B"><a href=""> 
-											The Sizes of DLAs at z~3 (in preparation) </a></span></h4>	
+											The Sizes of DLAs at z~2.5 (in preparation) </a></span></h4>	
 									</p>
 								</section>
 							</div>
@@ -94,7 +94,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Sizes of Damped Lyman-α Systems at z ~ 3 </h3>
+											<h3>Sizes of Damped Lyman-α Systems at z ~ 2.5 </h3>
 										</header>
 											with Kate H. R. Rubin, J. Xavier Prochaska, Zachary Hafen, Jonathan Stern, and Aaron Kakoly
 										<p>
