--- a/research.html
+++ b/research.html
@@ -73,7 +73,7 @@
 								
 								<div class="col-5 col-12-mobile">
 								<h3>Ultra-Massive Galaxies</h3>
-								<a href="#" class="image fit"><img src="images/umg_gen.png" style="border:3px solid black;" alt="" /></a><br>
+								<a href="#" class="image fit"><img src="images/mass_UMG.png" style="border:3px solid black;" alt="" /></a><br>
 								</div>
 								
 								<div class="col-7 col-12-mobile">
