--- a/umgs.html
+++ b/umgs.html
@@ -55,22 +55,21 @@
 	
 								<section>
 									<header>
-										<h3>Linked Publications</h3>
+										<h3>Linked 1st Author Publications </h3>
 									</header>
 									<p>
-										This paper is in prep! Please email for more information. 
+										<h4><span style="color:#00008B"><a href="https://ui.adsabs.harvard.edu/abs/2024OJAp....7E..46U/abstract"> Spectroscopic Confirmation of an Ultra-Massive Galaxy in a 
+											Protocluster at z ∼ 4.9</a></span></h4>
+										<br>
+										<h4><span style="color:#00008B"><a href=""> An Ultra-Massive Nitrogen Emitter at z ~ 3.8 (in preparation)</a></span></h4>
 									</p>
-									<div class="row gtr-50">
-						
-									</div>
-
 								</section>
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
 										<header>
-											<h3>Spectroscopic Confirmation of Ultra-Massive at 4 < z < 5</h3>
+											<h3>Spectroscopic Confirmation of Ultra-Massive Galaxies at 4 < z < 5</h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/umg_spec_ex.jpg" alt="" /></a>
 
