--- a/umgs.html
+++ b/umgs.html
@@ -69,10 +69,8 @@
 								<article id="main">
 									<section>
 										<header>
-											<h3>Spectroscopic Confirmation of Ultra-Massive Galaxies at 4 < z < 5</h3>
+											<h3>Searching for Monsters: Spectroscopic Survey of Ultra-Massive Galaxies at 4 < z < 5</h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/umg_spec_ex.jpg" alt="" /></a>
-
 										<p>
 											A major outstanding question in galaxy evolution lies in the mechanisms behind the rapid formation and subsequent
 											quenching of massive galaxies at early epochs. Recently, the Massive Ancient Galaxies At z > 3 NEar-infrared (MAGAZ3NE)
@@ -86,6 +84,7 @@
 											fields, we identified a sample of UMGs with z<sub>phot</sub> > 4. We observed each of the UMG candidates for a minimum of ~4 hours with Keck/LRIS or Keck/DEIMOS 
 											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. 
 										</p>
+												
 										<p> Initial results include spectrscopic confirmation of a UMG in the EGS at z = 4.8947. What's more is this galaxy
 											lies within one of the most extreme overdensity in the EGS across 3 < z < 6. This work is ongoing, so for more information please feel free to email me!</p>
 									</section>
