--- a/umgs.html
+++ b/umgs.html
@@ -69,7 +69,7 @@
 								<article id="main">
 									<section>
 										<header>
-											<h3>Searching for Monsters: Spectroscopic Survey of Ultra-Massive Galaxies at 4 < z < 5</h3>
+											<h2>Searching for Monsters: Spectroscopic Survey of Ultra-Massive Galaxies at 4 < z < 5</h2>
 										</header>
 										<p>
 											A major outstanding question in galaxy evolution lies in the mechanisms behind the rapid formation and subsequent
@@ -83,10 +83,13 @@
 											Using multi-band, wide-field imaging from the MAGAZ3NE collaboration in the XMM-VIDEO, COSMOS UltraVISTA, and the EGS 
 											fields, we identified a sample of UMGs with z<sub>phot</sub> > 4. We observed each of the UMG candidates for a minimum of ~4 hours with Keck/LRIS or Keck/DEIMOS 
 											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. 
-										</p>
-												
-										<p> Initial results include spectrscopic confirmation of a UMG in the EGS at z = 4.8947. What's more is this galaxy
-											lies within one of the most extreme overdensity in the EGS across 3 < z < 6. This work is ongoing, so for more information please feel free to email me!</p>
+										</p> <br> <br>
+										<header>
+											<h2>Spectroscopic Confirmation of a Ultra-Massive Galaxy in a z ~ 4.9 Protocluster</h2>
+										</header>	
+										<p> We present the first observations of a extremely massive (M<sub>*</sub> > 10<sup>10.98</sup> M<sub>⊙</sub> UMG in the EGS at z = 4.8947. This galaxy lies in one of the
+										most extreme overdensities in the EGS from 3 < z < 6, and is the most massive member. Our initial SED analysis suggest that this galaxy 
+										is likely a post-starburt, with more spectrscopic follow up to confirm its quiescence (see de Graaff et al. 2024).  </p>
 									</section>
 								</article>
 							</div>
