--- a/umgs.html
+++ b/umgs.html
@@ -69,7 +69,7 @@
 								<article id="main">
 									<section>
 										<header>
-											<h2>Searching for Monsters: Spectroscopic Survey of Ultra-Massive Galaxies at 4 < z < 5</h2>
+											<h2><b>Searching for Monsters: Spectroscopic Survey of Ultra-Massive Galaxies at 4 < z < 5</b></h2>
 										</header>
 										<p>
 											A major outstanding question in galaxy evolution lies in the mechanisms behind the rapid formation and subsequent
@@ -85,8 +85,12 @@
 											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. 
 										</p> <br> <br>
 										<header>
-											<h2>Spectroscopic Confirmation of a Ultra-Massive Galaxy in a z ~ 4.9 Protocluster</h2>
+											<h2><br>Spectroscopic Confirmation of a Ultra-Massive Galaxy in a z ~ 4.9 Protocluster</b></h2>
 										</header>	
+											with M. C. Cooper, Ben Forrest, Adam Muzzin, Danilo Marchesini, Gillian Wilson, Percy Gomez, Ian McConachie, Z. Cemile Marsan, Marianna Annuziatella, 
+											and Wenjun Chang
+											<br>
+											<a class="image fit"><img src="images/mass_UMG.png" alt="" /></a>
 										<p> We present the first observations of a extremely massive (M<sub>*</sub> > 10<sup>10.98</sup> M<sub>⊙</sub> UMG in the EGS at z = 4.8947. This galaxy lies in one of the
 										most extreme overdensities in the EGS from 3 < z < 6, and is the most massive member. Our initial SED analysis suggest that this galaxy 
 										is likely a post-starburt, with more spectrscopic follow up to confirm its quiescence (see de Graaff et al. 2024).  </p>
